2008-xx-xx - release 0.5
	- Bugfix: Recode ~/pi in both directions
	- Bugfix: Fastloaders now work on LarsP-style hardware too
	- Disk change key support
	- Full JiffyDos support

2007-12-25 - release 0.4.2
	- Bugfix: LarsP-style hardware actually works now

2007-12-19 - release 0.4.1
	- Bugfix: Creating a new file within an M2I image wrote
                  a terminating zero byte into the M2I directory entry
	- Bugfix: Another guesstimated delay in iec_putc
	- AVR Studio project file updated

2007-12-07 - release 0.4
	- Extended DOS commands:
	  - Enable/Disable JiffyDOS
	  - Set oscillator calibration
	- Full support for M2I images

2007-11-29 - release 0.3
	- disable interrupts during iec_getc
	- add full CRC checking in SD code with retries on errors
	- software fastloader support: Turbodisk protocol
	- card change detection
	- better file name parsing
	- directory loading supports wildcards
	- support for file overwrite (@)
	- option to display hidden files in directory
	- filename matching for open
	- filename matching for scratch

2007-11-02 - release 0.2.1
	- bugfix: Don't cause repeated entries at the end of the directory
	- bugfix: Don't repeast the last block of a saved file (1:256 chance)
	- bugfix: Increase all timeouts in the card initialisation
	- Recode 0xff in filenames to ~, both characters map to the pi
	  symbol on the C64

2007-11-01 - release 0.2
	- conditional compilation via make command line for chip type
	  and IO pin assignment (Shadowwolf/LarsP)
	- object files are generated in a subdirectory
	- bug fixes in IEC and buffer handling
	- added project file for AVR Studio (untested)
	- support for subdirectories
	- support for UI+/UI- commands (faster bus for VC20)
	- slightly improved command parser

2007-10-16 - release 0.1
	Initial release